# lcs-support

./: .gitignore  Makefile  README.md  RELEASE.md  setup-sidecar.sh
.github/workflows/: ci.yml
docs/feedback-harvester/: FEEDBACK-HARVESTER.md
docs/lcs-sidecar/: LCS-SIDECAR.md
docs/rcs-sidecar/: RCS-SIDECAR.md
env/: default-harvester-values  default-values
examples/custom-prompt-enabled/: README.md  placeholder-values  rcsprompt.yaml  rcssecret.yaml
examples/everything-enabled/: README.md  placeholder-values
examples/multi-provider/: README.md  placeholder-values  rcsconfig.yaml  rcssecret.yaml
examples/rhdh-config-enabled/: README.md  placeholder-values  rcsconfig.yaml
examples/single-provider/: README.md  rcsconfig.yaml
scripts/: generate-env.sh  generate-resources.sh  remove-harvester.sh  remove-lcs.sh  remove-postgres.sh  remove-sidecar.sh  setup-harvester.sh  setup-lcs.sh  setup-postgres.sh  setup-sidecar.sh
src/harvester/: .dockerignore  Containerfile  README.md  main.py  pyproject.toml
src/harvester/runner/utils/: db.py  utils.py  watcher.py
src/harvester/tests/unit/: test_db.py  test_utils.py  test_watcher.py
src/harvester/tests/unit/data/: sample_feedback_1.json  sample_feedback_2.json  sample_feedback_3.json  sample_feedback_4.json
templates/: README.md
templates/backstage/: harvester-setup.yaml  sidecar-setup.yaml
templates/postgres/: kustomization.yaml
templates/postgres/base/: deployment.yaml  service.yaml
templates/skeleton/: lightspeed-secret.yaml  lightspeed-stack.yaml  rcsconfig.yaml  rcsprompt.yaml  rcssecret.yaml
(+3 files in other folders)
